2007-07-26  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/funcobj.hxx:
	* source/numeric/funcobj.cxx: added toBaseFuncObj method to wrap
	SingleVarFuncObj inside a BaseFuncObj instance so that it can be passed
	to NumericalDiffer, which expects BaseFuncObj instance.
	
	* source/numeric/diff.cxx:
	* source/inc/numeric/quadfitlinesearch.hxx:
	* source/numeric/quadfitlinesearch.cxx:
	* source/numeric/quadfitlinesearch_test.cxx: adjusted for a slight 
	change in BaseFuncObj's interface.
	
	* workben/unittest/Makefile: added diff.o to quadfitlinesearch build 
	rule.

2007-07-26  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/diff.hxx:
	* source/numeric/diff.cxx:
	* source/numeric/diff_test.cxx:
	* source/numeric/nlpqnewton.cxx: changed the name of class Differentiate
	to NumericalDiffer & removed its implementation class by moving all the
	meat into the envelope class.
	
	* source/inc/numeric/quadfitlinesearch.hxx:
	* source/numeric/quadfitlinesearch.cxx: renamed a variable.
	
	* source/ui/basedlg.cxx: removed unused variable.
	
	* workben/addon_pkg/Makefile: added compiler switch to supress massive
	amount of warnings coming from the UNO code.

2007-07-16  Kohei Yoshida  <kyoshida@novell.com>

	* source/numeric/diff_test.cxx: beefed up the test code for numerical
	differentiation.

2007-07-14  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/funcobj.hxx:
	* source/numeric/funcobj.cxx: added operator() for convenience.
	
	* source/numeric/diff_test.cxx: fixed the test code to reflect API 
	change.
	
	* workben/unittest/Makefile: added diff test.
	
	* source/inc/numeric/quadfitlinesearch.hxx:
	* source/numeric/quadfitlinesearch.cxx: added a little more meat.

2007-07-10  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/funcobj.hxx:
	* source/numeric/funcobj.cxx (SingleVarFuncObj): new class to handle
	single-variable non-linear functions added.
	
	* source/inc/numeric/quadfitlinesearch.hxx: