@@ -24,7 +24,7 @@ SLOFILES =  \
 	$(SLO)$/nlpqnewton.obj \
 	$(SLO)$/lpsolve.obj \
 	$(SLO)$/exception.obj \
-	$(SLO)$/lineareqn.obj
+	$(SLO)$/polyeqnsolver.obj
 
 # --- Tagets -------------------------------------------------------
 
