@@ -1,3 +1,15 @@
+2007-08-08  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/basedlg.hxx:
+	* source/inc/solver.hxx:
+	* source/service/service.cxx: changed so that scsolver can be built 
+	externally using the SDK.
+	
+	* source/numeric/makefile.mk: fixed ooo-build breakage.
+
+	* workben/addon_pkg/Makefile_SDK.mk: added for building scsolver module
+	externally using the SDK.
+
 2007-07-26  Kohei Yoshida  <kyoshida@novell.com>
 
 	* source/inc/numeric/funcobj.hxx:
